--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "http-status-codes": "^1.4.0",
+    "is-image-url": "^1.1.8",
     "jimp": "^0.10.3"
   }
 }
